--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:firebase": "vite build --outDir ../firebase-sites/sites/kata-keeper --emptyOutDir",
     "lint": "eslint .",
     "preview": "vite preview"
   },
