--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VITE_FIREBASE_PROJECT_ID=your-project-id
 VITE_FIREBASE_STORAGE_BUCKET=your-project-bucket
 VITE_FIREBASE_MESSAGING_SENDER_ID=your-project-message-sender-id
 VITE_FIREBASE_APP_ID=your-project-app-id
+
+VITE_USE_EMULATORS=IF_USING_EMULATORS
