--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,21 @@
 {
-  "hosting": [{
-    "target": "kata-keeper-app",
-    "public": "dist",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [{ "source": "**", "destination": "/index.html" }]
-  }]
+  "hosting": [
+    {
+      "target": "kata-keeper-app",
+      "public": "dist",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [{ "source": "**", "destination": "/index.html" }]
+    }
+  ],
+  "functions": {
+    "source": "firebase-setup/functions",
+    "runtime": "nodejs20",
+    "endpoints": {
+      "previewKata": {
+        "region": "us-west1",
+        "invoker": "public"
+      }
+    }
+  },
+  "firestore": { "rules": "firestore.rules", "indexes": "firestore.indexes.json" }
 }
